# OnBoard-Verification

./: .env.example  .gitignore  ADARSH_UPDATED.MD  DOCUMENTATION.md  ENTERPRISE_UPGRADES_REPORT.md  ERRORS_AND_MITIGATIONS.md  README.md  YOLO_INTEGRATION_VERIFICATION.md  april22.md  clean_data.sh  create_dummy_docs.py  docker-compose.yml  dummy_resume.docx  generate_forged_pdf.py  generate_pdf.py  handoff_report.md  info.md  main.py  main_api.py  master.md  reevaluate_candidate.py  reference.txt  refractfrontend.md  requirements.txt  run_report.sh  run_stage2.py  stage4_runner.py  start.sh  start_stage1.sh  test_yolo.py  updated.md
backend/: .env.example  .gitignore  auth.py  config.py  data.json  database.py  main.py  migrate.py  models.py  onboardguard.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/infra/: azure_blob.py  local_storage_helper.py  text_extraction.py
backend/temp_audio/: 01b0305e-37f1-44a6-a499-507f64463662_43d5fb90-0253-42d2-9d0b-8ecac3495330.webm  01b0305e-37f1-44a6-a499-507f64463662_5ef099a7-ac0f-467d-8191-e67658bc5b4c.webm  01b0305e-37f1-44a6-a499-507f64463662_6c5e0464-2a24-49f2-9dd7-45907c1a4d6e.webm  0ac95c14-4953-4319-a0c8-13916d5125bb_9ba59589-7263-46a4-8db5-21dee30100ef.webm  0fd2cc3c-6cae-440b-9ad8-9eab9aa99ec4_22ea17f4-7df1-40fb-b8a4-f0d0cb17601c.webm  0fd2cc3c-6cae-440b-9ad8-9eab9aa99ec4_f8d0bf42-b7b9-4e4f-9dd8-a6da07d0ac1d.webm  166f8d1d-fec9-4d03-ba47-dcf5770b4ffa_38c04ec6-479c-4799-be61-5f6503230b01.webm  166f8d1d-fec9-4d03-ba47-dcf5770b4ffa_996afaae-5e8a-48f7-b490-e7afdb65beee.webm  (+179 more)
backend/utils/: azure_blob.py
(+548 files in other folders)
